Bug 126744 - Preview not updating after changing the printer
Summary: Preview not updating after changing the printer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.1 rc
Hardware: All Windows (All)
: medium normal
Assignee: Gabor Kelemen (Collabora)
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected
: 129181 129746 131802 (view as bug list)
Depends on:
Blocks: Print-Dialog
  Show dependency treegraph
 
Reported: 2019-08-07 08:26 UTC by BogdanB
Modified: 2020-04-03 06:34 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
video showing the problem (3.28 MB, video/mp4)
2019-08-07 08:27 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BogdanB 2019-08-07 08:26:39 UTC
Description:
After changing the printer in the new Print format, the Preview show Portrait, but the document is Landscape and is correct printed as Landscape. Just the Preview is wrong. After unchecking and checking again on Preview everything is fine. 

My conclusion is that Preview is not syncron.

Steps to Reproduce:
See the video.


Actual Results:
Preview is wrong - portrait

Expected Results:
Preview is Landscape - correct


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 6.3.1.0.0+ (x64)
Build ID: 60b6288bc1aec17d04b45f62ba6f117fc43f8ab4
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:libreoffice-6-3, Time: 2019-08-04_12:12:28
Locale: ro-RO (ro_RO); UI-Language: en-US
Calc: threaded
Comment 1 BogdanB 2019-08-07 08:27:21 UTC
Created attachment 153190 [details]
video showing the problem

Video showing the problem.
Comment 2 Oliver Brinzing 2019-08-07 13:56:50 UTC
reproducible with:

Version: 6.3.1.0.0+ (x64)
Build ID: 60b6288bc1aec17d04b45f62ba6f117fc43f8ab4
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 80386c73e172975572f265018333c6231a6b3b22
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: CL

this seems to have started with (and seems to be independent form new print dialog):

https://gerrit.libreoffice.org/plugins/gitiles/core/+/2c23a96f7b6888c0e05fdc2aba57f03cd797b647

commit 2c23a96f7b6888c0e05fdc2aba57f03cd797b647 [log]
author	Daniel <danielfaleirosilva@gmail.com>	
Tue May 15 22:58:38 2018 -0300
committer Daniel Silva <danielfaleirosilva@gmail.com>	
Thu Nov 29 13:02:16 2018 -0200
tree 046bb25699a9e357c2344d30009d50ab800e0952
parent e3ce6ea30e2cdd81857597f50ef5e0a6acd198ee [diff]

tdf#67905 adds an option to disable print preview in print dialog
Change-Id: Id6dd1724a1b8f61d94f0685f63d28b3cff19988f

$ git bisect bad 1641af2399e268d79ef3738cdf71be5409524924 is the first bad commit
commit 1641af2399e268d79ef3738cdf71be5409524924
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sat Dec 1 12:44:28 2018 -0800

    source 2c23a96f7b6888c0e05fdc2aba57f03cd797b647

    source 2c23a96f7b6888c0e05fdc2aba57f03cd797b647

:040000 040000 2aad48ada0090e6742a40b16a214805e14663aa4 3d6371f400b808fcf9f69be6d3094dfcb3d137c7 M      instdir

/cygdrive/d/sources/bibisect/bibisect-win32-6.3
$ git bisect log
# bad: [dadc32d7f3a44147c6f3445fefc7e84c8d30c14c] source 5f48428533e928868c11ddd00cc449a54d0cdfd9
# good: [ea94942caaf195b8d8b2d5c2abb523359ab390e7] source a20a2d7e0d28658f2d9089da076961a599833a28

git bisect start 'master' 'oldest'
# bad: [f806e9dbf073f03b47cdf69426d4b7751e5e947c] source 159e33ec661b2ce038b2642b2f30600ce7901d1b
git bisect bad f806e9dbf073f03b47cdf69426d4b7751e5e947c
# bad: [6c124ba609331033435a389ee6eb4ad3288e53d9] source c6e73f3e5bfd5b1cca94f985b5299857d0238ae3
git bisect bad 6c124ba609331033435a389ee6eb4ad3288e53d9
# bad: [3e9313237ddcd789887fd3e0e0715f41ed97d467] source 48d1df74036386ce19cfabd64d90afcd1532d5c9
git bisect bad 3e9313237ddcd789887fd3e0e0715f41ed97d467
# good: [7996d5cb51fe1a811de822d7b1bd24b8ce7484ff] source 67e062aa5e5946d4985921fe2b6f87766f363ddc
git bisect good 7996d5cb51fe1a811de822d7b1bd24b8ce7484ff
# good: [4c2cd4140cb1f762095684dca1f06b06f52d450a] source ce6ac77816005b380700118d0b1de0f145503024
git bisect good 4c2cd4140cb1f762095684dca1f06b06f52d450a
# bad: [68d95db97dc95c3043a5dec5829d2e6843cf74ce] source b94d0385903dfb7138d2924e81bf6be558a012d1
git bisect bad 68d95db97dc95c3043a5dec5829d2e6843cf74ce
# good: [0e584e97e7e68f48ace3e262ba217ffbaed27930] source 3288d88e0c0842a44aa959e41cc665b9cf3804b9
git bisect good 0e584e97e7e68f48ace3e262ba217ffbaed27930
# good: [ada7f4351d4b842f917e610198e96a91473968d8] source b9c9c70157e7bc5b868437ab6bda2b21ba34c627
git bisect good ada7f4351d4b842f917e610198e96a91473968d8
# good: [831ce1d0a7fa0b6f19ba1bb0d4c9ce35c0998470] source 9c0d40fbc7d01ff46b78b798361bf3a19cc18bdc
git bisect good 831ce1d0a7fa0b6f19ba1bb0d4c9ce35c0998470
# bad: [f1cb239fdd3f8e7405ea5255ed689bd40cff5114] source 6f878bd8bd5cc5e094570f4bfe5ac198297d6538
git bisect bad f1cb239fdd3f8e7405ea5255ed689bd40cff5114
# good: [5aec14897cc45f817f950e66af3614f7432c6072] source e3ce6ea30e2cdd81857597f50ef5e0a6acd198ee
git bisect good 5aec14897cc45f817f950e66af3614f7432c6072
# bad: [44bf88eba29bf4af933d01e2e16e6d39c070d888] source bc0146c2ae43256552c276d2dd86291c98556c42
git bisect bad 44bf88eba29bf4af933d01e2e16e6d39c070d888
# bad: [1641af2399e268d79ef3738cdf71be5409524924] source 2c23a96f7b6888c0e05fdc2aba57f03cd797b647
git bisect bad 1641af2399e268d79ef3738cdf71be5409524924
# first bad commit: [1641af2399e268d79ef3738cdf71be5409524924] source 2c23a96f7b6888c0e05fdc2aba57f03cd797b647
Comment 3 BogdanB 2019-09-27 10:13:43 UTC
Isn't this bug more important for 6.3?
It's very annoying to see something on preview and to print something else...
Comment 4 Oliver Brinzing 2019-09-28 08:21:25 UTC
reproducible with:

Version: 6.3.1.2 (x64)
Build-ID: b79626edf0065ac373bd1df5c28bd630b4424273
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: 

@xisco: can this issue be fixed with LO 6.3?
Comment 5 BogdanB 2019-11-05 18:58:55 UTC
I want to mention that the page should be landscape and ony after that choose another printer, in order to reproduce it.

I meet this bug every day. We use another printer as default, and I need to change very often, and that way, I meet this bug very often.
Comment 6 BogdanB 2019-12-07 16:59:02 UTC
*** Bug 129181 has been marked as a duplicate of this bug. ***
Comment 7 m_a_riosv 2020-01-03 11:20:43 UTC
*** Bug 129746 has been marked as a duplicate of this bug. ***
Comment 8 Gabor Kelemen (Collabora) 2020-02-10 14:04:28 UTC
Proposed patch: https://gerrit.libreoffice.org/c/core/+/88373
Comment 9 Commit Notification 2020-02-11 14:43:15 UTC
Kelemen Gábor committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5c283b86cd1f57d82b8d2c4d2fa355b50bd39e3b

tdf#126744 Transfer paper size and orientation to new printer

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 BogdanB 2020-02-12 16:46:45 UTC
Would be nice to be backported... It's a very annoying bug...
Comment 11 Timur 2020-04-03 06:34:01 UTC
*** Bug 131802 has been marked as a duplicate of this bug. ***