tdf#126744 Transfer paper size and orientation to new printer

when selected from the Printer dropdown list

Change-Id: Iedd53575c2e9146b663cf21b42b495473abe5165
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/88373
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <bubli@bubli.org>